# sheets

./: .eslintrc.cjs  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
src/: App.svelte  app.css  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/card/: Card.svelte
src/components/define-editor/: DefineEditor.svelte
src/components/define-table/: DefineTable.svelte
src/components/define-table/define-row/: DefineRow.svelte
src/components/deposit-editor/: DepositEditor.svelte
src/components/deposit-table/: DepositTable.svelte
src/components/deposit-table/deposit-row/: DepositRow.svelte
src/components/editor/: Editor.svelte
src/components/entry-editor/: EntryEditor.svelte
src/components/entry-table/: EntryTable.svelte
src/components/entry-table/entry-row/: EntryRow.svelte
src/components/header/: Header.svelte
src/components/table/: Table.svelte
src/components/table/row/: Row.svelte
src/lib/chip-input/: ChipInput.svelte
src/lib/dropdown/: Dropdown.svelte
src/lib/modal/: Modal.svelte
src/lib/page/: Page.svelte
src/lib/sidebar/: Sidebar.svelte
src/lib/switch/: Switch.svelte
src/pages/: Defines.svelte  Deposits.svelte  Main.svelte  Preferences.svelte
src/shared/: formatter.ts  global.d.ts  parser.ts  searcher.ts  storage.ts  tools.ts
src/shared/directives/: click-outside.ts
src/stores/: defines.ts  deposits.ts  entries.ts
