[package]
name = "sheets"
version = "0.0.5"
description = "A Profit Dashboard desktop app written using Tauri and Svelte"
authors = ["Isaiah Collins Abetong"]
license = "MIT"
repository = "https://github.com/icabetong/sheets"
default-run = "sheets"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "os-all", "path-all", "shell-open", "window-close"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
